--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "mongodb": "^3.1.13",
     "node-ses": "^2.1.0",
     "nodemailer": "^5.1.1"
   }
