--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   "dependencies": {
     "aws-sdk": "^2.395.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
-    "node-ses": "^2.1.0",
-    "nodemailer": "^5.1.1"
+    "node-ses": "^2.1.0"
   }
 }
