--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "aws-sdk": "^2.395.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongodb": "^3.1.13",
-    "node-ses": "^2.1.0"
+    "mongodb": "^3.1.13"
   }
 }
